<resources>
    <string name="app_name">Quan ly thu chi</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="login">Log In</string>
    <string name="signin">Sign In</string>
    <string name="or">or</string>

    <string name="SignInSuccess">Signin Success</string>


    <string name="facebook_app_id">504549433287488</string>
    <string name="login_facebook">Login with Facebook</string>

</resources>
