<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.Login.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="40dp"
        android:textColor="@color/colorGreen"
        android:layout_margin="@dimen/margin10dp"/>

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/margin10dp"
        android:hint="@string/Email" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10dp"
        android:hint="@string/Password" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_margin="@dimen/margin10dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorGreen"/>


    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/or"
        android:textSize="16dp"/>

    <Button
        android:id="@+id/btn_SignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10dp"
        android:background="@color/colorGreen"
        android:text="@string/signin"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"/>
    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_LoginFaceBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10dp"
        android:background="@color/colorPrimary"
        android:text="@string/login_facebook"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"/>





</LinearLayout>